@@ -1,5 +1,12 @@
 2006-01-31  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/ephy-link-action.c: (ephy_link_action_group_new):
+	* src/ephy-link-action.h:
+
+	Fix link action group creating to really use the given name!
+
+2006-01-31  Christian Persch  <chpe@cvs.gnome.org>
+
 	* data/epiphany-service.xml:
 	* src/ephy-activation.c: (ephy_activation_load_uris):
 	* src/ephy-activation.h:
